[package]
name = "rsnic"
version = "0.1.0"
authors = ["Spencer Burris <sburris@posteo.net>"]
edition = "2018"
description = "RuSt Neat Invidious Client - watch YouTube videos privately via CLI with the Invidious API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
ureq = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
termion = "*"
confy = "*"
structopt = "*"
